Added info about Dynamax & Z-Moves to p!moves in Duels